Revert "fix: fixed issue with responsive layout on mobile"
This reverts commit 71b1afe232a1ed215aaa15505d31c3c888ac924a.

--- a/static/index.css
+++ b/static/index.css
@@ -155,18 +155,3 @@ body {
 #interpolation-image-wrapper img {
   border-radius: 5px;
 }
-
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-body {
-    overflow-x: hidden;
-}
-
-.carousel-item {
-    width: 100%;
-    max-width: 100%;
-}
